--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "todoapp",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://mikimau5.github.io/to-do-app",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
